# pytorch_lightning

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg
configs/: config.py  train.yaml  train_config.yaml
src/: utils_module.py
src/configs/: config.py  constants.py  logger.py
src/datamodule/: dataclass.py  dataset.py  transform.py
src/ml/: lightning_module.py  train.py
src/ml/callback/: experiment_tracking.py
